--- a/scss/style.scss
+++ b/scss/style.scss
@@ -1,12 +1,12 @@
 // base file
-@import "base/_variables";
-@import 'base/_reset';
-@import 'base/_mixins';
-@import 'base/_lib';
-@import 'base/_elements';
+@import "base/variables";
+@import 'base/reset';
+@import 'base/mixins';
+@import 'base/lib';
+@import 'base/elements';
 
 // import layout
 @import 'layout/layout';
 @import 'layout/header';
 // page file
-@import "pages/_home";
+@import "pages/home";
