--- a/scss/layout/_layout.scss
+++ b/scss/layout/_layout.scss
@@ -1,13 +1,36 @@
-.container-fluid {
+.container{
     width: 100%;
-    padding-right: 56px;
-    padding-left: 56px;
-    margin-right: auto;
+    padding-left: 15px;
+    padding-right: 15px;
     margin-left: auto;
+    margin-right: auto;
 }
 
-@media (min-width: 1200px) {
-    .container {
-        max-width: 1480px;
+.container-fluid{
+    width: 100%;
+    padding-left: 15px;
+    padding-right: 15px;
+    margin-left: auto;
+    margin-right: auto;
+}
+
+@media (min-width: 1200px){
+    .container{
+        max-width: $container-max-width;
+    }
+}
+@media (min-width: 992px){
+    .container{
+        max-width: 960px;
+    }
+}
+@media (max-width: 768px){
+    .container{
+        max-width: 720px;
+    }
+}
+@media (max-width: 576px){
+    .container{
+        max-width: 540px;
     }
 }
