--- a/scss/base/_elements.scss
+++ b/scss/base/_elements.scss
@@ -10,10 +10,14 @@ body {
     font-family: Verdana, Geneva, Tahoma, sans-serif;
 }
 
-img{
+img {
     width: 100%;
     height: 100%;
     vertical-align: middle;
+}
+
+.active-text{
+    color: $cl-primary;
 }
 
 .input-radio {
@@ -112,5 +116,24 @@ img{
             transform: rotate(48deg);
             width: 5px;
         }
+    }
+}
+
+.title {
+    text-align: center;
+    font-family: pop;
+
+    &__text {
+        font-size: 40px;
+        font-weight: 600;
+        color: $text-1;
+        line-height: 60px;
+    }
+
+    &__desc {
+        font-size: 20px;
+        font-weight: 300;
+        color: $text-2;
+        line-height: 30px;
     }
 }
